# pqy-wechat

./: .gitignore  .gitmodules  TODO.md  package.json  setup.bat  setup.sh
.claude/: settings.json
.claude/agents/: code-reviewer.md
.claude/skills/code-reviewer/: SKILL.md
data/cache/: cqlib_cookies.json
data/downloads/cnki/: 1017017843.nh_网络游戏反按键模拟外挂技术研究.caj
docs/: README.md  offline-simulation-plan.md
docs/architecture/: api-gateway.md  automation-engine.md  ddimon-extension.md  ddimon-usage.md  frontend.md  hook-layer.md  hyperdbg-integration.md  mcp-protocol.md  mmmojo-proxy.md  overview.md  tech-stack-selection.md  xplugin-inject.md
docs/crypto/: database-encryption.md  mmtls-analysis.md
docs/network/: cgi-reporting.md  mars-stn-protocol.md
docs/reverse/: mars-stn.md  mmmojo.md  mmtls.md  signatures.md
docs/risk-control/: bypass-strategy.md  full-analysis.md  parameter-reference.md  quantitative-analysis.md  remote-command-system.md  risk-assessment.md
docs/security/: evasion-strategy.md
docs/signatures/: golden-reference.md
docs/simulation/: phase1-continued.md  phase1-final-summary.md  phase1-static-results.md  phase2-config-extraction.md  phase2-live-readonly.md  phase2-live-results.md
docs/teams/: cross-team-architecture.md
engine/: pyproject.toml  requirements.txt
engine/config/: settings.yaml
engine/src/: __init__.py  main.py
engine/src/bridge/: __init__.py  zmq_server.py
engine/src/core/: __init__.py  bus.py  events.py
engine/src/executor/: __init__.py  human_sim.py  uia_bridge.py
engine/src/monitor/: __init__.py  risk_detector.py
engine/src/plugins/: __init__.py  base.py  contact.py  message.py  moments.py
frontend/: package.json  tsconfig.json  vite.config.ts
native/: CMakeLists.txt  CMakeLists_simple.txt
native/build_proxy/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  MmmojoProxy.sln  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  mmojo_proxy.vcxproj  mmojo_proxy.vcxproj.filters
native/build_proxy/Release/: mmmojo_64.exp
native/build_proxy/mmojo_proxy.dir/Release/: mmmojo_64.dll.recipe
native/build_proxy/mmojo_proxy.dir/Release/mmojo_proxy.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  CustomBuild.read.1.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
native/build_proxy/x64/Release/ALL_BUILD/: ALL_BUILD.recipe
native/build_proxy/x64/Release/ALL_BUILD/ALL_BUILD.tlog/: CustomBuild.command.1.tlog  CustomBuild.write.1.tlog
native/build_proxy/x64/Release/ZERO_CHECK/: ZERO_CHECK.recipe
native/build_proxy/x64/Release/ZERO_CHECK/ZERO_CHECK.tlog/: CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  ZERO_CHECK.lastbuildstate
native/build_simple/: CMakeCache.txt
native/ddimon_client/: ddimon_client.cpp  ddimon_client.h
native/ddimon_ext/: README.md
native/ddimon_proxy/: CMakeLists.txt  ddimon_proxy.cpp
native/include/: crc_bypass.h  debugger_bypass.h  hook_manager.h  process_bypass.h
native/lib/Release/: minhook.lib  mmmojo_64.exp  mmmojo_64.lib  mmojo_64.exp  mmojo_64.lib
native/src/hook/: crc_bypass.cpp  debugger_bypass.cpp  dllmain.cpp  dllmain_simple.cpp  freq_monitor.cpp  hook_manager.cpp  process_bypass.cpp  remote_cmd_bypass.cpp
native/src/proxy/: CMakeLists.txt  mmmojo_proxy.cpp  mmmojo_proxy.h
native/src/utils/: logger.cpp
native/tests/: hook_test.cpp
scripts/: README.md  auto_fix.py  auto_monitor.py  code_review.py  deploy_proxy.py  extract_dns.ps1  find_configs.ps1  find_logs.ps1  find_xlog.ps1  inject.py  monitor_wechat.py  phase2_check.ps1  procmon_config.pmc  restore_proxy.py  search_logs.ps1  search_pcap.ps1  search_wechat_data.ps1  windbg_commands.txt
server/: .env.example  package.json  tsconfig.json
server/src/: app.ts  index.ts
tools/x64dbg/: commithash.txt
(+71 files in other folders)
