[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pqy-wechat-engine"
version = "1.0.0"
description = "PQY 微信自动化中间层 - 自动化引擎"
requires-python = ">=3.12"
license = "MIT"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
